added cards added services

--- a/src/app/store/item/items/items.component.html
+++ b/src/app/store/item/items/items.component.html
@@ -1,3 +1,12 @@
-<p>
-  items works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4 col-md-6 mb-4" *ngFor="let item of items">
+      <p-card [title]="item.title" [subtitle]="item.price.toString()" [style]="{width: '360px'}" styleClass="ui-card-shadow">
+        <p-header>
+          <img src="" alt="itemPhoto">
+        </p-header>
+        <div>{{item.description}}</div>
+      </p-card>
+    </div>
+  </div>
+</div>
