changed OnInit in items.compoennt

--- a/src/app/store/item/items/items.component.html
+++ b/src/app/store/item/items/items.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4 col-md-6 mb-4" *ngFor="let item of items">
-      <p-card [title]="item.title" [subtitle]="item.price.toString()" [style]="{width: '360px'}" styleClass="ui-card-shadow">
+      <p-card *ngIf="item" [title]="item.title" [subtitle]="item.price.toString()" [style]="{width: '360px'}" styleClass="ui-card-shadow">
         <p-header>
           <img src="" alt="itemPhoto">
         </p-header>
