added picture example to card

--- a/src/app/store/item/items/items.component.html
+++ b/src/app/store/item/items/items.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-4 col-md-6 mb-4" *ngFor="let item of items">
       <p-card *ngIf="item" [title]="item.title" [subtitle]="item.price.toString()" [style]="{width: '360px'}" styleClass="ui-card-shadow">
         <p-header>
-          <img src="" alt="itemPhoto">
+          <img src="../../../../assets/Tom_the_Cat.jpg" alt="itemPhoto">
         </p-header>
         <div>{{item.description}}</div>
       </p-card>
