--- a/src/app/store/item/items/items.component.html
+++ b/src/app/store/item/items/items.component.html
@@ -1,11 +1,13 @@
 <div class="container">
-  <div class="row">
-    <div class="col-lg-4 col-md-6 mb-4" *ngFor="let item of items">
+  <img src="../../../../assets/Tom_the_Cat.jpg" alt="itemPhoto">
+  <div class="p-grid">
+    <div class="p-col-3" *ngFor="let item of items">
       <p-card *ngIf="item" [title]="item.title" [subtitle]="item.price.toString()" [style]="{width: '360px'}" styleClass="ui-card-shadow">
         <p-header>
           <img src="../../../../assets/Tom_the_Cat.jpg" alt="itemPhoto">
         </p-header>
         <div>{{item.description}}</div>
+        <img src="../../../../assets/Tom_the_Cat.jpg" alt="itemPhoto">
       </p-card>
     </div>
   </div>
