--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,2 +1,2 @@
-<app-header></app-header>
-<app-items></app-items>
+<app-header (selectedCategory)="onCategorySelected($event)"></app-header>
+<app-items [selectedCategory]="selectedCategory"></app-items>
