--- a/src/app/store/shop-items/shop-items.component.html
+++ b/src/app/store/shop-items/shop-items.component.html
@@ -1,12 +1,49 @@
-<div class="container">
-  <div class="p-grid">
-    <div class="p-col-3" *ngFor="let item of items">
-      <p-card *ngIf="item.price" [title]="item.title" [subtitle]="item.price.toString()" [style]="{width: '360px'}" styleClass="ui-card-shadow">
-        <p-header>
-          <img src="../../../assets/Tom_the_Cat.jpg" alt="itemPhoto">
-        </p-header>
-        <div>{{item.description}}</div>
-      </p-card>
+<p-dataView [value]="items">
+  <p-header>
+    <div class="ui-helper-clearfix">
+      <div class="ui-g">
+        <div class="ui-g-6 ui-md-4 filter-container">
+          <div style="position:relative">
+            <input type="search" pInputText placeholder="Search by brand">
+          </div>
+        </div>
+        <div class="ui-g-6 ui-md-4" style="text-align:right">
+          <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+  </p-header>
+  <ng-template let-item pTemplate="listItem">
+    <div class="ui-g" style="padding: 2em;border-bottom: 1px solid #d9d9d9">
+      <div class="ui-g-12 ui-md-3" style="text-align:center">
+        <img src="../../../assets/images.jpg">
+      </div>
+      <div class="ui-g-12 ui-md-8 car-details">
+        <div class="ui-g">
+          <div class="ui-g-2 ui-sm-6">Price: </div>
+          <div class="ui-g-10 ui-sm-6"><b>{{item.price}}</b></div>
+
+          <div class="ui-g-2 ui-sm-6">Description: </div>
+          <div class="ui-g-10 ui-sm-6"><b>{{item.description}}</b></div>
+
+          <div class="ui-g-2 ui-sm-6">Title: </div>
+          <div class="ui-g-10 ui-sm-6"><b>{{item.title}}</b></div>
+
+        </div>
+      </div>
+      <div class="ui-g-12 ui-md-1 search-icon">
+        <button title="Add to busket" pButton type="button" icon="pi pi-plus" (click)="selectCar($event, car)"></button>
+      </div>
+    </div>
+  </ng-template>
+  <ng-template let-item pTemplate="gridItem">
+    <div style="padding:.5em" class="ui-g-12 ui-md-3">
+      <p-panel [header]="item.title" [style]="{'text-align':'center'}">
+        <img src="../../../assets/images.jpg" width="60">
+        <div class="car-detail">{{item.description}} - {{item.price}}</div>
+        <hr class="ui-widget-content" style="border-top:0">
+        <button pButton title="Add to busket" type="button" icon="pi pi-plus" (click)="addToBusket($event, item)" style="margin-top:0"></button>
+      </p-panel>
+    </div>
+  </ng-template>
+</p-dataView>
