--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,25 @@
 <footer>
-<div class="aboutAs">
-Info
-</div>
-<div class="contacts">
-  Tel Numbers, Mails
-</div>
-<div class="rights">All rights reserved &copy;{{year}}</div>
+  <div class="aboutAs">
+    <ul>
+      <li><a href="http://it-cluster.if.ua">It claster</a></li>
+      <li>за підтримки:</li>
+      <li><a href="https://github.com/OlenaTaras?tab=repositories">Olena Taras</a>
+     
+    </ul>
+    
+  </div>
+  <div class="contacts">
+    <ul>
+      <li><a href="http://it-cluster.if.ua">It claster</a></li>
+      <li>tel: <a href="tel:+38 073 412 67 87"> 073 412 67 87</a></li>
+      <li>mail: <a href="mailto:info@it-cluster.if.ua"> info@it-cluster.if.ua</a></li>
+    </ul>
+    
+  </div>
+  <div class="rights">
+    <ul>
+      <li><a href="#">All rights reserved &copy;{{year}}</a></li>
+    </ul>
+    
+  </div>
 </footer>
