--- a/src/app/store/card/card.component.html
+++ b/src/app/store/card/card.component.html
@@ -1,25 +1,31 @@
 <ul class="card" *ngFor="let item of items">
 
     <li *ngIf="items">
-      <img (click)="showDialog()" src="../../../../assets/img/samsung-j2-2018-sm-j250g-original-imaf4uwk3udf3uj4.jpeg" alt="">
+      <img (click)="showDialog()" src="../../../assets/img/samsung15png.png" alt="">
       <p class="text" (click)="showDialog()">{{item.description}}</p>
       <p class="price" (click)="showDialog()">{{item.price}} $</p>
+      <div class="button">
+        <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary" (click)="save()"></button>
+        <button  pButton type="button" label="Характеристики" class="ui-button-secondary" (click)="showDialog()"> </button>
+      </div>
 
-      <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary" (click)="save()"></button>
-
+      
 
     </li>
   </ul>
-  <p-dialog header="" [(visible)]="display">
-      <ul class="card">
-          <li>
-            <img src="../../assets/img/samsung-j2-2018-sm-j250g-original-imaf4uwk3udf3uj4.jpeg" alt="">
-            <p class="text">Samsung S4000</p>
-            <p class="price">700 $</p>
+  
+  <p-dialog header="" [(visible)]="display" [transitionOptions]="'400ms'">
+    <div>
 
-            <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary" (click)="save()"></button>
-
+    
+      <li *ngIf="items">
+          <img (click)="showDialog()" src="../../../assets/img/samsung15png.png" alt="">
+          <p class="text" (click)="showDialog()">{{item.description}}</p>
+          <p class="price" (click)="showDialog()">{{item.price}} $</p>
+          <div class="button">
+           
+          </div>
 
           </li>
-        </ul>
+    </div>   
   </p-dialog>
