--- a/src/app/store/store.component.scss
+++ b/src/app/store/store.component.scss
@@ -1,6 +1,10 @@
 
 .container {
    padding: 0 20px;
+   width: 100%;
+   height: 100%;
+   display: flex;
+   
 }
 
 body .ui-paginator {
@@ -10,4 +14,40 @@ body .ui-paginator {
 }
 body .ui-paginator .ui-paginator-pages .ui-paginator-page.ui-state-active {
    background-color: #c8c8c8;
+}
+.menu_left {
+   margin-top: 0.7em;
+   width: 20%;
+   background: linear-gradient(45deg, #292929 25%, transparent 25%, transparent 75%, #292929 75%), linear-gradient(45deg, #292929 25%, transparent 25%, transparent 75%, #292929 75%) 0.1875em 0.1875em, radial-gradient(at 50% 0, #484847, #090909);
+   background-size: 0.375em 0.375em, 0.375em 0.375em, 100% 100%;
+   position: relative;
+   align-items: center;
+   
+  
+  }
+
+  .menu_left_fixed {
+   position: fixed;
+   width: 16%;
+  }
+.content_right {
+   width: 100%;
+   height: 100%;
+   padding: 0 1em;
+  
+}
+.menu_left_phone{
+   width: 100%;
+   margin-bottom: 1em;
+   background-color: #eee;
+}
+.menu_left_watch{
+   width: 100%;
+   margin-bottom: 1em;
+   background-color: #eee;
+}
+.menu_left_headphone{
+   width: 100%;
+   margin-bottom: 1em;
+   background-color: #eee;
 }
