--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,7 +1,37 @@
 
 <app-header (selectedCategory)="onCategorySelected($event)"></app-header>
 <div class="container">
-   <app-card [selectedCategory]="selectedCategory"></app-card>
-   <p-paginator [rows]="10" totalRecords="100" (onPageChange)="paginate($event)"></p-paginator>
+   <div class="menu_left">
+      <div class="menu_left_fixed">
+         <div class="menu_left_phone">
+            <ul>
+               <li>Samsung</li>
+               <li>iphone</li>
+          
+            </ul>
+         </div>
+     
+         <div class="menu_left_watch">
+            <ul>
+               <li>Man</li>
+               <li>Woman</li>
+              
+            </ul>
+         </div>
+         <div class="menu_left_headphone">
+            <ul>
+               <li>headphone</li>
+               <li>headphone</li>
+                 
+            </ul>
+         </div>
+      </div>     
+   </div>
+   <div class="content_right">
+         <app-card [selectedCategory]="selectedCategory"></app-card>
+   </div>
+  
+   
 </div>
+<p-paginator [rows]="10" totalRecords="100" (onPageChange)="paginate($event)"></p-paginator>
 
