--- a/src/app/store/card/card.component.html
+++ b/src/app/store/card/card.component.html
@@ -12,7 +12,11 @@
       
 
     </li>
+    
   </ul>
+  <div class="pagination">
+      <p-paginator [rows]="10" totalRecords="100" (onPageChange)="paginate($event)"></p-paginator>
+  </div>
   
   <p-dialog header="" [(visible)]="display" [transitionOptions]="'400ms'">
     <div>
