--- a/src/app/store/card/card.component.html
+++ b/src/app/store/card/card.component.html
@@ -1,31 +1,13 @@
 <ul class="card" *ngFor="let item of items">
-
     <li *ngIf="items">
       <img (click)="showDialog()" src="../../../assets/img/samsung15png.png" alt="">
       <p class="text" (click)="showDialog()">{{item.description}}</p>
       <p class="price" (click)="showDialog()">{{item.price}} $</p>
       <div class="button">
         <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary" (click)="save()"></button>
-        <button  pButton type="button" label="Характеристики" class="ui-button-secondary" (click)="showDialog()"> </button>
+        <button  pButton type="button" label="Характеристики" class="ui-button-secondary" (click)="showDialog(item)"> </button>
       </div>
-
-      
-
     </li>
   </ul>
-  
-  <p-dialog header="" [(visible)]="display" [transitionOptions]="'400ms'">
-    <div>
 
-    
-      <li *ngIf="items">
-          <img (click)="showDialog()" src="../../../assets/img/samsung15png.png" alt="">
-          <p class="text" (click)="showDialog()">{{item.description}}</p>
-          <p class="price" (click)="showDialog()">{{item.price}} $</p>
-          <div class="button">
-           
-          </div>
-
-          </li>
-    </div>   
-  </p-dialog>
+<app-shop-item-dialog [selectedShopItem]="selectedShopItem" [(visible)]="visible"></app-shop-item-dialog>
