--- a/src/app/store/header/header.component.html
+++ b/src/app/store/header/header.component.html
@@ -1,4 +1,3 @@
-
 <div class="header">
    <div class="header_up">
      <div class="header_up_left">
@@ -11,23 +10,22 @@
          <input type="text" pInputText 
          placeholder="введіть назву товару" 
          [(ngModel)]="seachStr"
-         > 
-         <p-sidebar [(visible)]="display" position="right">
-             Вміст корзини...
-             {{cardItem}}fdsfsdfsd
-         </p-sidebar>
-         <button class="card" type="text" (click)="display = true" pButton label="Корзина"></button>
+         >
+       <p-dialog header="Вибрані товари" [(visible)]="display" [modal]="true" [responsive]="true" [width]="700" [minWidth]="200" [minY]="70"
+                 [maximizable]="true" [baseZIndex]="10000">
+
+         <app-basket></app-basket>
+         <p-footer>
+           <button type="button" pButton icon="pi pi-check" (click)="display=false" label="Yes"></button>
+           <button type="button" pButton icon="pi pi-close" (click)="display=false" label="No" class="ui-button-secondary"></button>
+         </p-footer>
+       </p-dialog>
+       <button class="card" type="text" (click)="showDialog()" pButton label="Корзина"></button>
               
      </div>
   
    <p-menubar [model]="items" >
      </p-menubar>
-   <!-- <div class="header_down">
-        
-    
-   </div> -->
-     
+
  </div>
  </div>
- 
- 
