--- a/src/app/store/card/card.component.html
+++ b/src/app/store/card/card.component.html
@@ -6,7 +6,7 @@
       <p class="price" (click)="showDialog()">{{item.price}} $</p>
       <div class="button">
         <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary" (click)="save()"></button>
-        <button  pButton type="button" label="Характеристики" class="ui-button-secondary" (click)="showDialog()"> </button>
+        <button  pButton type="button" label="Характеристики" class="ui-button-secondary" (click)="showDialog(item)"> </button>
       </div>
 
 
@@ -14,6 +14,9 @@
     </li>
 
   </ul>
+
+  <app-shop-item-dialog [selectedShopItem]="selectedShopItem" [(visible)]="visible"></app-shop-item-dialog>
+
   <div class="pagination">
       <p-paginator [rows]="pageSize" totalRecords="100" (onPageChange)="paginate($event)"></p-paginator>
   </div>
