--- a/src/app/store/header/basket/basket.component.scss
+++ b/src/app/store/header/basket/basket.component.scss
@@ -1,1 +1,33 @@
 
+.okBasket {
+  padding:10px 20px;
+  background-color: green;
+  color:white;
+  border-radius:25px;
+  outline:none;
+  font-size:16px;
+}
+.delBasket {
+  padding:10px 15px;
+  background-color: red;
+  color:white;
+  border-radius:25px;
+  outline:none;
+  margin-top:10px;
+}
+.text {
+  font-size:16px;
+}
+.title {
+font-size:16pt;
+ font-weight: bolder;
+}
+.category {
+  font-size:13pt;
+}
+.subcategory{
+  font-size: 12pt;
+}
+.price {
+  font-size:14pt;
+}
