--- a/src/app/store/header/header.component.html
+++ b/src/app/store/header/header.component.html
@@ -12,16 +12,13 @@
          [(ngModel)]="seachStr"
          >
        <p-dialog header="Вибрані товари" [(visible)]="display" [modal]="true" [responsive]="true" [width]="700" [minWidth]="200" [minY]="70"
-                 [maximizable]="true" [baseZIndex]="10000">
+                [baseZIndex]="10000">
 
          <app-basket></app-basket>
-         <p-footer>
 
-           <button type="button" pButton icon="pi pi-close" (click)="display=false" label="No" class="ui-button-secondary"></button>
-         </p-footer>
        </p-dialog>
        <button class="card" type="text" (click)="showDialog()" pButton label="Корзина"></button>
-              
+
      </div>
   
    <p-menubar [model]="items" >
