--- a/src/app/store/card/card.component.html
+++ b/src/app/store/card/card.component.html
@@ -4,9 +4,22 @@
       <img (click)="showDialog()" src="../../../assets/img/samsung15png.png" alt="">
       <p class="text" (click)="showDialog()">{{item.description}}</p>
       <p class="price" (click)="showDialog()">{{item.price}} $</p>
+
+      <div class="icon" (click)="putLike()">
+      <div *ngIf="like; else star">
+         <i class="pi pi-star-o"> </i>
+      </div>
+        <ng-template #star>
+          <i class="pi pi-star"></i>
+        </ng-template>
+      </div>
+
       <div class="button">
-        <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary" (click)="save()"></button>
-        <button  pButton type="button" label="Характеристики" class="ui-button-secondary" (click)="showDialog()"> </button>
+        <button pButton type="button" label="Добавити в корзину"
+         class="ui-button-secondary" (click)="save()"></button>
+        <button  pButton type="button" label="Характеристики"
+        class="ui-button-secondary" (click)="showDialog()"> </button>
+
       </div>
 
 
