itemInfo, create search products

--- a/src/app/store/card/card.component.html
+++ b/src/app/store/card/card.component.html
@@ -1,35 +1,36 @@
 <ul class="card" *ngFor="let item of items">
 
     <li *ngIf="items">
-      <img (click)="showDialog()" src="../../../assets/img/samsung15png.png" alt="">
-      <p class="text" (click)="showDialog()">{{item.description}}</p>
-      <p class="price" (click)="showDialog()">{{item.price}} $</p>
-      <div class="button">
-        <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary" (click)="save()"></button>
-        <button  pButton type="button" label="Характеристики" class="ui-button-secondary" (click)="showDialog()"> </button>
-      </div>
-
-
-
+        <!--<img (click)="showDialog(item)" [src]=item.img alt="">-->
+        <img (click)="showDialog(item)" src="../../../assets/img/samsung15png.png" alt="">
+        <p class="text">{{item.description}}</p>
+        <p class="price">{{item.price}} $</p>
+        <div class="button">
+            <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary"
+                    (click)="save()"></button>
+            <button pButton type="button" label="Характеристики" class="ui-button-secondary"
+                    (click)="showDialog(item)"></button>
+        </div>
     </li>
 
-  </ul>
-  <div class="pagination">
-      <p-paginator [rows]="pageSize" totalRecords="100" (onPageChange)="paginate($event)"></p-paginator>
-  </div>
+</ul>
+<div class="pagination">
+    <p-paginator [rows]="pageSize" totalRecords="100" (onPageChange)="paginate($event)"></p-paginator>
+</div>
 
-  <p-dialog header="" [(visible)]="display" [transitionOptions]="'400ms'">
+<p-dialog header="" [(visible)]="display" [transitionOptions]="'400ms'">
     <div>
 
 
-      <li *ngIf="items">
-          <img (click)="showDialog()" src="../../../assets/img/samsung15png.png" alt="">
-          <p class="text" (click)="showDialog()">{{item.description}}</p>
-          <p class="price" (click)="showDialog()">{{item.price}} $</p>
-          <div class="button">
-
-          </div>
-
-          </li>
+        <li *ngIf="itemInfo">
+            <img (click)="showDialog()" src="../../../assets/img/samsung15png.png" alt="">
+            <p class="text">{{itemInfo.description}}</p>
+            <p class="price">price :{{itemInfo.price}} $</p>
+            <p> category: {{itemInfo.category}}</p>
+            <div class="button"></div>
+        </li>
+        <div *ngIf="!itemInfo">
+            немає інформації
+        </div>
     </div>
-  </p-dialog>
+</p-dialog>
