--- a/src/app/store/header/basket/basket.component.scss
+++ b/src/app/store/header/basket/basket.component.scss
@@ -1,3 +1,9 @@
 .ui-sidebar {
   overflow-y: scroll;
 }
+.baskt-btn {
+  background-color: red;
+  color: white;
+  border-radius:10px;
+  border:0;
+}
