--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -2,30 +2,10 @@
 <app-header (selectedCategory)="onCategorySelected($event)"></app-header>
 <div class="container">
    <div class="menu_left">
-      <div class="menu_left_fixed">
-         <div class="menu_left_phone">
-            <ul>
-               <li>Samsung</li>
-               <li>iphone</li>
-          
-            </ul>
-         </div>
-     
-         <div class="menu_left_watch">
-            <ul>
-               <li>Man</li>
-               <li>Woman</li>
-              
-            </ul>
-         </div>
-         <div class="menu_left_headphone">
-            <ul>
-               <li>headphone</li>
-               <li>headphone</li>
-                 
-            </ul>
-         </div>
-      </div>     
+
+     <p-checkbox name="groupname" value="val1" label="Value 1" [(ngModel)]="selectedValues"></p-checkbox>
+     <p-checkbox name="groupname" value="val2" label="Value 2" [(ngModel)]="selectedValues"></p-checkbox>
+
    </div>
    <div class="content_right">
          <app-card [selectedCategory]="selectedCategory"></app-card>
