--- a/src/app/store/card/card.component.html
+++ b/src/app/store/card/card.component.html
@@ -1,9 +1,11 @@
 <ul class="card" *ngFor="let item of items">
 
     <li *ngIf="items">
-      <img (click)="showDialog()" src="../../../assets/img/samsung15png.png" alt="">
-      <p class="text" (click)="showDialog()">{{item.description}}</p>
-      <p class="price" (click)="showDialog()">{{item.price}} $</p>
+      <img src="../../../assets/img/samsung15png.png" alt="">
+      <div  (click)="showDialog(item)">
+        <p class="text">{{item.description}}</p>
+        <p class="price">{{item.price}} $</p>
+      </div>
       <div class="button">
         <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary" (click)="save()"></button>
         <button  pButton type="button" label="Характеристики" class="ui-button-secondary" (click)="showDialog(item)"> </button>
@@ -27,13 +29,10 @@
 
 
       <li *ngIf="items">
-          <img (click)="showDialog()" src="../../../assets/img/samsung15png.png" alt="">
-          <p class="text" (click)="showDialog()">{{item.description}}</p>
-          <p class="price" (click)="showDialog()">{{item.price}} $</p>
-          <div class="button">
+          <img src="../../../assets/img/samsung15png.png" alt="">
+          <p class="text">{{item.description}}</p>
+          <p class="price">{{item.price}} $</p>
 
-          </div>
-
-          </li>
+      </li>
     </div>
   </p-dialog>
