UI form send users

--- a/src/app/store/header/basket/basket.component.html
+++ b/src/app/store/header/basket/basket.component.html
@@ -14,6 +14,6 @@
 </div>
 <p>Загальна ціна : {{total() | currency:'USD':'$'}}</p>
 <hr>
-<button pButton type="button" label="Оформити замовлення" class="ui-button-success"></button>
+<button pButton type="button" label="Оформити замовлення" class="ui-button-success" (click)="close()"></button>
 
 
