--- a/src/app/store/header/header.component.scss
+++ b/src/app/store/header/header.component.scss
@@ -113,7 +113,12 @@ body .ui-menubar .ui-menuitem-link .ui-menuitem-text {
       
        
    }
-   
+.ng-valid[required], .ng-valid.required {
+  border-left: 5px solid #42A948;
+}
+.ng-invalid:not(form) {
+  border-left: 5px solid #a94442;
+}
 
   
 
@@ -124,4 +129,3 @@ body .ui-menubar .ui-menuitem-link .ui-menuitem-text {
 
   
       
-        
