--- a/src/app/store/header/basket/basket.component.html
+++ b/src/app/store/header/basket/basket.component.html
@@ -8,12 +8,12 @@
     <p class="category">{{item.category}}</p>
     <p class="subcategory">{{item.subcategory}}</p>
     <p class="price">{{item.price}} $</p>
-    <button class="baskt-btn" (click)="delBasket()">Видалити з корзини</button>
+    <button class="baskt-btn">Видалити з корзини</button>
   </div>
 
 </div>
 <p>Загальна ціна : {{total() | currency:'USD':'$'}}</p>
 <hr>
-<button pButton type="button" label="Оформити замовлення" class="ui-button-success" (click)="close()"></button>
+<button pButton type="button" label="Success" class="ui-button-rounded ui-button-success" (click)="close()"></button>
 
 
