Ui and functional dialog form

--- a/src/app/store/header/header.component.scss
+++ b/src/app/store/header/header.component.scss
@@ -113,6 +113,7 @@ body .ui-menubar .ui-menuitem-link .ui-menuitem-text {
       
        
    }
+   // Dialog send user form
 .form{
 display:flex;
  flex-direction: column;
@@ -121,12 +122,8 @@ display:flex;
   display:flex;
   flex-direction: column;
   text-align: center;
-  margin-top: 4px;
+  margin-bottom: 4px;
 }
-
-
-
-
 .form-submit label,
 .form-submit input[type="email"],
 .form-submit input[type="password"],
@@ -135,20 +132,14 @@ display:flex;
   padding: 1rem;
   color: #3A3F44;
 }
-
 .form-submit label {
-
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-
 .form-submit input[type="email"], .form-submit input[type="password"] {
   background-color: white;
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
-}
-.form-submit input[type="email"]:focus, .form-submit input[type="email"]:hover, .form-submit input[type="password"]:focus, .form-submit input[type="password"]:hover {
-  background-color: #eeeeee;
 }
 .form-submt {
   background-color: green;
@@ -157,17 +148,19 @@ display:flex;
   padding:20px 10px;
   border-radius: 20px;
   border:none;
+  margin-top: 10px;
 }
-.form-submit input[type="submit"]:focus, .form-submit input[type="submit"]:hover {
-  background-color: #120a2e;
+
+.form-submt:disabled {
+  background-color: grey;
+  color: white;
+  text-transform: uppercase;
+  padding:20px 10px;
+  border-radius: 20px;
+  border:none;
+  margin-top: 10px;
 }
-.form-item {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 2rem;
-}
+
 
 
 
