--- a/src/app/store/header/header.component.html
+++ b/src/app/store/header/header.component.html
@@ -18,25 +18,24 @@
        <p-dialog header="Оформення замовлення" [(visible)]="displayer" resizable="false" draggable="false" modal="true">
          <div class="register-item">
            <form #myform="ngForm" (ngSubmit)="register(myform)" class="form form-submit">
-
-             <div class="form-item ui-inputgroup">
-               <label class="user" for="register-firstName">Введіть ім'я</label>
-               <input name="firstName" id="register-firstName" type="text" placeholder="Ім'я" pInputText  ngModel required>
+             <div class="form-item ui-inputgroup " [class.has-error]="firstName.invalid && firstName.touched" [class.has-success]="firstName.valid">
+               <label class="user" for="firstName" class="custom-control-label">Введіть ім'я</label>
+               <input name="firstName" id="firstName"  type="text" placeholder="Ім'я" #firstName="ngModel" pInputText ngModel required>
+               <span class="help-block" *ngIf="firstName.invalid && firstName.touched">Поле імя обовязкове для заповлення</span>
              </div>
              <div class="form-item ui-inputgroup">
                <label class="user" for="register-secondName">Введіть фамілію</label>
                <input name="secondName" id="register-secondName" type="text"  placeholder="Фамілія" pInputText ngModel required>
              </div>
-
              <div class="ui-inputgroup form-item">
                <label class="user" for="register-phone">Введіть номер телефона</label>
-               <input name="phone" id="register-phone" type="text"  placeholder="Номер телефона" pInputText ngModel required>
-
+               <input name="phone" id="register-phone" type="text"  #phone="ngModel" placeholder="Номер телефона" pInputText ngModel required phone  pattern="[0-9]+">
              </div>
-
-             <div class="form-item ui-inputgroup">
-               <label class="user" for="register-email">Введіть email</label>
-               <input name="email" id="register-email" type="email" placeholder="Email" pInputText pKeyFilter="email" ngModel required>
+             <div class="form-item ui-inputgroup" [class.has-error]="email.invalid && email.touched" [class.has-success]="firstName.valid">
+               <label class="user" for="register-email" class="custom-control-label">Введіть email</label>
+               <input name="email"  id="register-email" email type="email" #email="ngModel" placeholder="Email" pInputText pKeyFilter="email" ngModel required >
+               <span class="help-block" *ngIf="email.errors?.required && email.touched">Поле email обовязкове для заповлення</span>
+               <span class="help-block" *ngIf="email.errors?.email && email.touched">Поле email введене некоректно </span>
              </div>
              <div class="form-item">
                <button type="submit" class="form-submt" [disabled]="!myform.form.valid">Відправити замовлення</button>
