--- a/src/app/store/header/basket/basket.component.html
+++ b/src/app/store/header/basket/basket.component.html
@@ -1,5 +1,4 @@
 <p>У вашій корзині {{items.length}} товарів </p>
-
 <hr>
 <div class="p-grid" *ngFor="let item of items">
   <div class="p-col-4"><img src="../../../../assets/kisspng-samsung-galaxy-j7.jpg" alt="" width="80" height="70"></div>
@@ -10,10 +9,9 @@
     <p class="price">{{item.price}} $</p>
     <button class="baskt-btn">Видалити з корзини</button>
   </div>
-
 </div>
 <p>Загальна ціна : {{total() | currency:'USD':'$'}}</p>
 <hr>
-<button pButton type="button" label="Success" class="ui-button-rounded ui-button-success" (click)="close()"></button>
+<button pButton type="button" label="Оформити замовлення" class="ui-button-success" (click)="close()"></button>
 
 
