--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,10 +1,12 @@
-
-<app-header (selectedCategory)="onCategorySelected($event)"></app-header>
+<app-header (selectedCategory)="onCategorySelected($event)" xmlns="http://www.w3.org/1999/html"></app-header>
 <div class="container">
    <div class="menu_left">
+     <div class="sorted-container">
 
-     <p-checkbox name="groupname" value="val1" label="Value 1" [(ngModel)]="selectedValues"></p-checkbox>
-     <p-checkbox name="groupname" value="val2" label="Value 2" [(ngModel)]="selectedValues"></p-checkbox>
+     <p-checkbox name="groupname" value="val1" label="Lowest Price" [(ngModel)]="selectedValues"></p-checkbox><br>
+     <p-checkbox name="groupname" value="val2" label="Highest Price" [(ngModel)]="selectedValues"></p-checkbox>
+
+     </div>
 
    </div>
    <div class="content_right">
