--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -3,7 +3,7 @@
    <div class="menu_left">
      <div class="sorted-container">
 
-     <p-checkbox name="groupname" value="val1" label="Lowest Price" [(ngModel)]="selectedValues"></p-checkbox><br>
+     <p-checkbox name="groupname" value="val1" label="Lowest Price" [(ngModel)]="selectedValues"></p-checkbox>
      <p-checkbox name="groupname" value="val2" label="Highest Price" [(ngModel)]="selectedValues"></p-checkbox>
 
      </div>
