--- a/src/app/store/card/card.component.html
+++ b/src/app/store/card/card.component.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="button">
-        <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary" (click)="save()"></button>
+        <button pButton type="button" label="Добавити в корзину" class="ui-button-secondary" (click)="save(item)"></button>
         <button  pButton type="button" label="Характеристики" class="ui-button-secondary" (click)="showDialog(item)"> </button>
       </div>
 
