--- a/src/app/store/header/header.component.scss
+++ b/src/app/store/header/header.component.scss
@@ -165,3 +165,9 @@ display:flex;
   font-size: 14px;
   margin-top: 7px;
 }
+
+
+.ui-menuitem-text {
+   text-transform: capitalize;
+   font-size: 18px;
+}
