--- a/src/app/store/store.component.scss
+++ b/src/app/store/store.component.scss
@@ -16,14 +16,15 @@ body .ui-paginator .ui-paginator-pages .ui-paginator-page.ui-state-active {
    background-color: #c8c8c8;
 }
 .menu_left {
-   margin-top: 0.7em;
+   margin-top: 0.83em;
    width: 20%;
+   min-width: 140px;
    background: linear-gradient(45deg, #292929 25%, transparent 25%, transparent 75%, #292929 75%), linear-gradient(45deg, #1f2229 25%, transparent 25%, transparent 75%, #292929 75%) 0.1875em 0.1875em, radial-gradient(at 50% 0, #484847, #090909);
    background-size: 0.375em 0.375em, 0.375em 0.375em, 100% 100%;
    position: relative;
    align-items: center;
    flex-direction: column;
-
+   
 
   }
 
@@ -35,7 +36,7 @@ body .ui-paginator .ui-paginator-pages .ui-paginator-page.ui-state-active {
 .content_right {
    width: 100%;
    height: 100%;
-   padding: 0 9em;
+   padding: 0.9em;
 
 }
 .menu_left_phone{
@@ -55,6 +56,7 @@ body .ui-paginator .ui-paginator-pages .ui-paginator-page.ui-state-active {
 }
 
 .sorted-container{
+   position: fixed;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -63,7 +65,10 @@ body .ui-paginator .ui-paginator-pages .ui-paginator-page.ui-state-active {
 body .ui-chkbox-label {
   margin: 0 0 0 0.5em;
   color: #F4F4F4;
+  
 }
 body .sorted-container {
-  margin: 50px 0 0 50px;
+   
+  margin: 10px 0 0 10px;
+  
 }
